@@ -1,0 +1,46 @@
+export(arrange)
+export(colwise, numcolwise, catcolwise)
+export(catcolwise)
+export(numcolwise)
+export(as.data.frame.function)
+export(defaults)
+export(each)
+export(splat)
+export(summarise, summarize)
+export(failwith)
+export(join)
+export(laply)
+export(daply)
+export(aaply)
+export(ldply)
+export(ddply)
+export(adply)
+export(liply)
+export(llply)
+export(dlply)
+export(alply)
+export(mdply)
+export(maply)
+export(mlply)
+export(m_ply)
+export(l_ply)
+export(d_ply)
+export(a_ply)
+export(rlply)
+export(rdply)
+export(raply)
+export(r_ply)
+export(create_progress_bar)
+export(progress_none)
+export(progress_text)
+export(progress_tk)
+export(progress_win)
+export(quoted)
+export(eval.quoted)
+export(as.quoted)
+export(is.formula)
+export(rbind.fill)
+export(compact)
+export(is.discrete)
+export(unrowname)
+export(true)
