@@ -10,6 +10,7 @@
 #' @param optional necessary to match the generic, but not used
 #' @param ... necessary to match the generic, but not used
 #' @method as.data.frame function
+#' @export
 as.data.frame.function <- function(x, row.names, optional, ...) {
   name <- deparse(substitute(x))
   function(...) data.frame(value = x(...))
