@@ -4,6 +4,7 @@
 #' @param x list of values
 #' @param y defaults
 #' @keywords manip 
+#' @export
 defaults <- function(x, y)  {
   c(x, y[setdiff(names(y), names(x))])
 } 
