@@ -18,6 +18,7 @@
 #' @param ... other arguments passed on to \code{.fun}
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @return a data frame
+#' @export
 #' @examples
 #' mdply(data.frame(mean = 1:5, sd = 1:5), rnorm, n = 2)
 #' mdply(expand.grid(mean = 1:5, sd = 1:5), rnorm, n = 2)
@@ -47,6 +48,8 @@ mdply <- function(.data, .fun = NULL, ..., .progress = "none") {
 #' @param ... other arguments passed on to \code{.fun}
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @return if results are atomic with same type and dimensionality, a vector, matrix or array; otherwise, a list-array (a list with dimensions)
+#' @export
+#' @examples
 #' maply(cbind(mean = 1:5, sd = 1:5), rnorm, n = 5)
 #' maply(cbind(1:5, 1:5), rnorm, n = 5)
 #' maply(expand.grid(mean = 1:5, sd = 1:5), rnorm, n = 5)
@@ -75,6 +78,7 @@ maply <- function(.data, .fun = NULL, ..., .progress = "none") {
 #' @param ... other arguments passed on to \code{.fun}
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @return list of results
+#' @export
 #' @examples
 #' mlply(cbind(1:4, 4:1), rep)
 #' mlply(cbind(1:4, times = 4:1), rep)
@@ -105,6 +109,7 @@ mlply <- function(.data, .fun = NULL, ..., .progress = "none") {
 #' @param .fun function to be called with varying arguments
 #' @param ... other arguments passed on to \code{.fun}
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
+#' @export
 m_ply <- function(.data, .fun = NULL, ..., .progress = "none") {
   if (is.matrix(.data) & !is.list(.data)) .data <- .matrix_to_df(.data)
 
