@@ -12,6 +12,7 @@
 #' @param .expr expression to evaluate
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @return list of results
+#' @export
 #' @examples
 #' mods <- rlply(100, lm(y ~ x, data=data.frame(x=rnorm(100), y=rnorm(100))))
 #' hist(laply(mods, function(x) summary(x)$r.squared))
@@ -50,6 +51,7 @@ rlply <- function(.n, .expr, .progress = "none") {
 #' @param .expr expression to evaluate
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @return a data frame
+#' @export
 #' @examples
 #' rdply(20, mean(runif(100)))
 #' rdply(20, each(mean, var)(runif(100)))
@@ -82,6 +84,7 @@ rdply <- function(.n, .expr, .progress = "none") {
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @return if results are atomic with same type and dimensionality, a vector, matrix or array; otherwise, a list-array (a list with dimensions)
 #' @param .drop should extra dimensions of length 1 be dropped, simplifying the output.  Defaults to \code{TRUE}
+#' @export
 #' @examples
 #' raply(100, mean(runif(100)))
 #' raply(100, each(mean, var)(runif(100)))
@@ -116,6 +119,7 @@ raply <- function(.n, .expr, .progress = "none", .drop = TRUE) {
 #' @param .expr expression to evaluate
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @param .print automatically print each result? (default: \code{FALSE})
+#' @export
 #' @examples
 #' r_ply(10, plot(runif(50)))
 #' r_ply(25, hist(runif(1000)))
